--- a/k8-deploy.yaml
+++ b/k8-deploy.yaml
@@ -38,7 +38,7 @@ metadata:
   name: user-cm
 data:
   MONGO_URL: "mongodb://admin1:roboshop1@roboshop-dev-docdb.cluster-c93whrwsdihk.us-east-1.docdb.amazonaws.com:27017/user?tls=true&tlsCAFile=global-bundle.pem&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
-  REDIS_HOST: "roboshop-dev.8m1fwx.0001.use1.cache.amazonaws.com:6379"
+  REDIS_HOST: "roboshop-dev.8m1fwx.0001.use1.cache.amazonaws.com"
 --- 
 # Creating ClusterIP Service ( this is the default type ) 
 apiVersion: v1
